--- a/faq.css
+++ b/faq.css
@@ -3,19 +3,34 @@ body{
   font-family: 'Roboto', sans-serif;
   padding: 0;
   width: 60%;
-  margin: auto;
+  margin: 1% auto ;
 }
 
 h1{
   text-align: center;
 }
 
-.faq-content{
+input{
+  width: 30%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.faq-base{
   padding: 20px;
   background-color: #ffffffd0;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   margin-bottom: 20px;
 }
+
+.faq-seach{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 
 
