--- a/faq.css
+++ b/faq.css
@@ -74,3 +74,16 @@ input{
   display: none;
 }
 
+
+@media only screen and (max-width: 600px) {
+  body{
+    width: 90%;
+  }
+
+  input{
+    width: 100%;
+  }
+
+
+}
+
